packages/dialog/src/dialog.pcss
@import url("@sikt/sds-tokens/dist/css/custom-media.css");

.sds-dialog {
  --modal-border-radius: 16px;

  background-color: var(--sds-color-layout-background-default);
  border: none;
  box-shadow: var(--sds-effect-shadow-elevated-default);
  color: var(--sds-color-text-primary);
  flex-direction: column;
  padding: 0;
  width: 100%;
  z-index: var(--sds-base-zindex-modal);

  @media (--sds-base-breakpoint-tablet) {
    border-radius: var(--modal-border-radius);
    max-width: var(--sds-base-breakpoint-tablet);

    &.sds-dialog--scrollable {
      border-radius: var(--modal-border-radius) 0 0 var(--modal-border-radius);
    }
  }

  &::backdrop {
    background-color: transparent;
    transition:
      background-color var(--sds-effect-animation-duration-medium)
        var(--sds-effect-animation-easing-default),
      display var(--sds-effect-animation-duration-medium) allow-discrete,
      overlay var(--sds-effect-animation-duration-medium) allow-discrete;
  }

  &:modal {
    max-height: 100vh;
    max-width: 100vw;
    position: fixed;

    @media (--sds-base-breakpoint-tablet) {
      max-width: var(--sds-base-breakpoint-tablet);
    }
  }

  &[open] {
    display: flex;

    &:focus-visible {
      outline: var(--sds-focus-outline);
    }

    &::backdrop {
      background-color: rgb(0 0 0 / 60%);
    }
  }

  &--drawer {
    --modal-border-radius: 0;

    margin: 0;
    min-height: 100vh;
    overflow: auto;
    top: 0;
    bottom: 0;
    transition:
      translate var(--sds-effect-animation-duration-medium)
        var(--sds-effect-animation-easing-default),
      overlay var(--sds-effect-animation-duration-medium) allow-discrete,
      display var(--sds-effect-animation-duration-medium) allow-discrete;

    &-right {
      /* INFO: needed for animation to not push the page */
      position: fixed;
      max-height: 100vh;
      right: 0;
      left: unset;
      translate: 100% 0;

      &[open] {
        translate: 0 0;

        @starting-style {
          translate: 100% 0;
        }
      }
    }

    &-left {
      left: 0;
      translate: -100% 0;

      &[open] {
        translate: 0 0;

        @starting-style {
          translate: -100% 0;
        }
      }
    }
  }

  &__header {
    align-items: center;
    display: flex;
    gap: var(--sds-space-gap-small);
    flex-direction: row;
    flex-grow: 0;
    justify-content: space-between;
    padding: var(--sds-space-padding-large) var(--sds-space-padding-large)
      var(--sds-space-gap-medium) var(--sds-space-padding-large);
  }

  &__heading {
    display: flex;
    flex-direction: column;
    gap: var(--sds-space-gap-small);
  }

  &__close-button {
    align-self: flex-start;
  }

  &__content-wrapper {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
  }

  &__content {
    flex-grow: 1;
    padding: var(--sds-space-padding-medium) var(--sds-space-padding-large);

    @media (--sds-base-breakpoint-tablet) {
      flex-grow: 0;
    }
  }

  &__footer {
    align-items: flex-end;
    display: flex;
    flex-direction: column;
    flex-grow: 0;
    gap: var(--sds-space-gap-small);
    justify-content: flex-end;
    padding: var(--sds-space-gap-medium) var(--sds-space-padding-large)
      var(--sds-space-padding-large);

    @media (--sds-base-breakpoint-tablet) {
      flex-direction: row;
    }
  }
}

